# task-planning

./: .gitignore  CMakeLists.txt  README.md
planners/: ipp
planners/tests/Contingent-FF/: run_c-ff_test.sh  test-1_plan.txt  test-1_problem.pddl
planners/tests/ff/: run_ff_test.sh  (+6 more)
rosplan/: CMakeLists.txt
rosplan/include/rosplan_planning_system/: CFFPlanParser.h  FFPlanParser.h  PlanningEnvironment.h
rosplan/src/PlanParsing/: CFFPlanParser.cpp  FFPlanParser.cpp  PlanParser.cpp
rosplan/test/: print_actions.cpp  test_ff_parser.cpp
rosplan/test/diagnostic_msgs/: KeyValue.h
rosplan/test/fwk/ros/: ros.h
rosplan/test/fwk/rosplan_dispatch_msgs/: ActionDispatch.h
rosplan/test/fwk/rosplan_knowledge_msgs/: Filter.h  KnowledgeItem.h  Notification.h
rosplan/test/fwk/rosplan_planning_system/: PlanParser.h  PlanningEnvironment.h
rosplan/test/prf-db/: test_1-action_plan.pddl  test_error_plan.pddl
rosplan/test/rosplan_dispatch_msgs/: ActionDispatch.h
rosplan/test/rosplan_knowledge_msgs/: Notification.h
tests/Contingent-FF/: run_c-ff_test.sh  test-1_domain.pddl  test-2_plan.txt
tests/ff/: run_ff_test.sh  test-1_domain.pddl  test-1_problem.pddl  test-2_domain.pddl  test-2_problem.pddl  test-3_domain.pddl  test-3_plan.txt  test-3_problem.pddl  test-4_domain.pddl  test-4_plan.txt  test-4_problem.pddl  test-5_domain.pddl
tests/popf/: run_popf_test.sh  test-1_domain.pddl  test-1_plan.txt  test-1_problem.pddl  test-2_domain.pddl  test-2_plan.txt  test-3_domain.pddl  test-3_plan.txt  test-3_problem.pddl  test-4_domain.pddl  test-4_plan.txt  test-4_problem.pddl
(+3 files in other folders)
